Fix card content overflow on small devices

--- a/css/site.css
+++ b/css/site.css
@@ -108,8 +108,16 @@
     background:    linear-gradient(to bottom, rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.3));
     width:         100%;
 }
+
 .card-content {
     height: 180px;
+}
+
+
+@media(max-width: 700px) {
+    .card .card-content {
+        overflow: auto;
+    }
 }
 
 .card-content p:not(first-child) {
